--- a/package.json
+++ b/package.json
@@ -39,9 +39,14 @@
       ],
       "themes": [
         {
-          "label": "dCBOR Envelope Theme",
+          "label": "dCBOR Envelope Dark",
           "uiTheme": "vs-dark",
-          "path": "./themes/dcbor-envelope-color-theme.json"
+          "path": "./themes/dcbor-envelope-dark-color-theme.json"
+        },
+        {
+          "label": "dCBOR Envelope Light",
+          "uiTheme": "vs",
+          "path": "./themes/dcbor-envelope-light-color-theme.json"
         }
       ]
     },
