--- a/language-configuration.json
+++ b/language-configuration.json
@@ -3,5 +3,5 @@
     "lineComment": "//",
     "blockComment": ["/*", "*/"]
   },
-  "brackets": [["{", "}"], ["[", "]"], ["(", ")"]]
+  "brackets": [["{", "}"], ["[", "]"], ["(", ")"], ["«", "»"], ["❰", "❱"], ["<<", ">>"]]
 }
