--- a/language-configuration.json
+++ b/language-configuration.json
@@ -1,7 +1,34 @@
 {
   "comments": {
-    "lineComment": "//",
-    "blockComment": ["/*", "*/"]
+    "lineComment": "#",
+    "blockComment": ["/", "/"]
   },
-  "brackets": [["{", "}"], ["[", "]"], ["(", ")"], ["«", "»"], ["❰", "❱"], ["<<", ">>"]]
+  "brackets": [
+    ["{", "}"],
+    ["[", "]"],
+    ["(", ")"],
+    ["«", "»"],
+    ["❰", "❱"],
+    ["<<", ">>"]
+  ],
+  "autoClosingPairs": [
+    ["{", "}"],
+    ["[", "]"],
+    ["(", ")"],
+    ["«", "»"],
+    ["❰", "❱"],
+    ["<<", ">>"],
+    ["\"", "\""],
+    ["'", "'"]
+  ],
+  "surroundingPairs": [
+    ["{", "}"],
+    ["[", "]"],
+    ["(", ")"],
+    ["«", "»"],
+    ["❰", "❱"],
+    ["<<", ">>"],
+    ["\"", "\""],
+    ["'", "'"]
+  ]
 }
