--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test": "jest",
     "dev": "code --extensionDevelopmentPath=$(pwd)",
     "package": "vsce package",
-    "install": "vsce package && code --install-extension dcbor-envelope-0.1.0.vsix"
+    "install": "tsc -p ./ && vsce package && code --install-extension dcbor-envelope-0.1.0.vsix"
   },
   "keywords": ["syntax", "dcbor", "envelope", "cbor"],
   "license": "BSD-2-Clause-Patent",
