--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "dcbor-envelope",
   "displayName": "dCBOR-Envelope",
-  "description": "Syntax highlighting for dCBOR envelopes",
+  "description": "Syntax highlighting for CBOR, dCBOR, and Gordian Envelope",
   "version": "0.1.0",
-  "publisher": "local",
+  "publisher": "BlockchainCommons",
   "repository": {
     "type": "git",
     "url": "https://github.com/BlockchainCommons/vscode-dcbor-envelope"
   },
   "engines": {
-    "vscode": "^1.75.0"
+    "vscode": "^1.101.0"
   },
   "categories": ["Other"],
   "main": "./dist/extension.js",
