--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "engines": {
     "vscode": "^1.101.0"
   },
-  "categories": ["Other"],
+  "categories": ["Programming Languages", "Themes"],
+  "icon": "images/icon.png",
   "main": "./dist/extension.js",
   "scripts": {
     "build": "tsc -p ./",
@@ -20,7 +21,7 @@
     "package": "vsce package",
     "install": "tsc -p ./ && vsce package && code --install-extension dcbor-envelope-0.1.0.vsix"
   },
-  "keywords": ["syntax", "dcbor", "envelope", "cbor"],
+  "keywords": ["syntax", "dcbor", "envelope", "cbor", "gordian"],
   "license": "BSD-2-Clause-Patent",
   "type": "commonjs",
   "contributes": {
