--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
       },
       {
         "id": "envelope-pattern",
-        "aliases": ["Envelope Pattern", "envpat"],
-        "extensions": [".envpat"],
+        "aliases": ["Envelope Pattern", "patex"],
+        "extensions": [".patex"],
         "configuration": "./language-configuration.json"
       }
     ],
@@ -58,7 +58,7 @@
             "meta.embedded.block.dcbor": "dcbor-envelope",
             "meta.embedded.block.envelope": "dcbor-envelope",
             "meta.embedded.block.cbor": "dcbor-envelope",
-            "meta.embedded.block.envpat": "envelope-pattern",
+            "meta.embedded.block.patex": "envelope-pattern",
             "source.dcbor-envelope": "dcbor-envelope",
             "source.envelope-pattern": "envelope-pattern"
           }
